--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Hun"
   avatar           : "profile.jpg"
   bio              : "Climate Scientist"
-  location         : "Location"
+  location         : "New Haven"
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "http://yourfullgooglescholarurl.com"
